--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: lightseagreen;
+  color: white;
+  font-size: 1em;
+}
+
+.button {
+  background-color: aqua;
+  color: black;
+  font-size: .8em;
+  border-radius: 25%;
+  margin-left: 20px;
+  padding: 10px;
+  border: 5px solid coral
+
+}
+
+input {
+  font-size: .8em;
+  color: black;
+  border: 5px solid coral
 }
 
 code {
